# cats-django-project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: asgi.py  settings.py  urls.py
backend/: settings.py  urls.py
cats/: admin.py  apps.py  consumers.py  models.py  serializers.py  views.py
cats/migrations/: 0001_initial.py  0002_chatmessage.py  0003_alter_cat_breed_alter_chatmessage_created_at_and_more.py
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app-module.ts  app-routing-module.ts  app.css  app.html  app.ts
frontend/src/app/cats/: cats.css  cats.html  cats.spec.ts  cats.ts
frontend/src/app/cats/cat-form/: cat-form.css  cat-form.html  cat-form.spec.ts  cat-form.ts
frontend/src/app/chat/: chat.css  chat.html  chat.ts
frontend/src/app/guards/: auth-guard.ts
frontend/src/app/interceptors/: auth.ts
frontend/src/app/login/: login.css  login.html  login.ts
frontend/src/app/pipes/: plural-pipe.spec.ts  plural-pipe.ts
frontend/src/app/profile/: profile.css  profile.html  profile.ts
frontend/src/app/public-cats/: public-cats.css  public-cats.html  public-cats.ts
frontend/src/app/register/: register.css  register.html  register.ts
frontend/src/app/services/: auth.ts  cat.ts  chat.ts  profile.ts
